Fix overflow (#6)
* remove laradock submodule

* initial stuff

* upgrade laravel; update asset paths

* replace bower components; improve mobile UI

* fix overflow on non-map page

* remove bower components

--- a/resources/less/app/scaffolding.less
+++ b/resources/less/app/scaffolding.less
@@ -8,6 +8,9 @@ html {
 
 body {
   margin-top: 50px;
-  overflow: hidden;
   background: url('../../../public/assets/img/texture.png') top left #f5f5f5;
+}
+
+body.pages-map {
+  overflow: hidden;
 }
